# python-template

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/mypackage/: __init__.py  cli.py  core.py
test_results/: tests.xml
tests/: conftest.py  test_core.py
workflows/: ci.yml
