[project]
name = "mypackage"
version = "0.1.0"
description = "Brief description of the project"
authors = [{ name = "Shubham Wagh" }]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "click>=8.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.5",
  "pytest-mock>=3.14.0",
  "coverage[toml]>=7.6.12",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-mock>=3.14.0",
  "ruff>=0.9.10",
  "pre-commit>=4.0.0",
]

[project.scripts]
mypackage = "mypackage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --junit-xml=test_results/tests.xml"
testpaths = ["tests"]
markers = [
  "integration: integration tests",
]

[tool.coverage.run]
source = ["mypackage"]

[tool.ruff]
line-length = 79
indent-width = 2
exclude = [".venv", ".env", ".git", "tests"]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ERA", # eradicate (commented-out code)
  "I",   # isort
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PGH", # pygrep-hooks
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
]
fixable = ["ALL"]
ignore = ["SIM117"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["mypackage"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
